exercise 2 hours  added to routine.

--- a/src/index.html
+++ b/src/index.html
@@ -31,19 +31,23 @@
           </thead>
           <tbody>
             <tr>
+              <td>03:00AM - 05:00AM</td>
+              <td>exercise</td>
+            </tr>
+            <tr>
               <td>05:00AM - 09:00AM</td>
               <td>Learning web-development</td>
             </tr>
             <tr>
-              <td>09:00AM - 05:00PM</td>
+              <td>09:00AM - 04:30PM</td>
               <td>School</td>
             </tr>
             <tr>
-              <td>05:00PM - 07:00PM</td>
-              <td>Home Work</td>
+              <td>04:30PM - 07:00PM</td>
+              <td>Home work</td>
             </tr>
             <tr>
-              <td>07:00PM - 05:00AM</td>
+              <td>07:00PM - 04:00AM</td>
               <td>Sleep</td>
             </tr>
           </tbody>
@@ -58,15 +62,19 @@
           </thead>
           <tbody>
             <tr>
-              <td>05:00AM - 10:00AM</td>
-              <td>Learning web-development</td>
-            </tr>
-            <tr>
-              <td>10:00AM - 01:00PM</td>
+              <td>03:00AM - 05:00AM</td>
               <td>exercise</td>
             </tr>
             <tr>
-              <td>01:00PM - 05:00PM</td>
+              <td>05:00AM - 12:00PM</td>
+              <td>Learning web-development</td>
+            </tr>
+            <tr>
+              <td>12:00PM - 02:00PM</td>
+              <td>Jumu'ah</td>
+            </tr>
+            <tr>
+              <td>02:00PM - 05:00PM</td>
               <td>Learning web-development</td>
             </tr>
             <tr>
