exams days routine added

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
               <td>Home work</td>
             </tr>
             <tr>
-              <td>07:00PM - 04:00AM</td>
+              <td>07:00PM - 03:00AM</td>
               <td>Sleep</td>
             </tr>
           </tbody>
@@ -82,14 +82,48 @@
               <td>Home work</td>
             </tr>
             <tr>
-              <td>07:00PM - 05:00AM</td>
+              <td>07:00PM - 03:00AM</td>
+              <td>Sleep</td>
+            </tr>
+          </tbody>
+        </table>
+        <h2 class="text-lg font-bold">Three Months before Exams month:</h2>
+        <table class="tableStyle">
+          <caption>
+            Exams Exception:
+          </caption>
+          <thead>
+            <tr>
+              <th>Time</th>
+              <th>Task</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>03:00AM - 05:00AM</td>
+              <td>Learning web-development</td>
+            </tr>
+            <tr>
+              <td>05:00AM - 09:00AM</td>
+              <td>Study</td>
+            </tr>
+            <tr>
+              <td>09:00AM - 04:30PM</td>
+              <td>School</td>
+            </tr>
+            <tr>
+              <td>04:30PM - 07:00PM</td>
+              <td>Home work</td>
+            </tr>
+            <tr>
+              <td>07:00PM - 03:00AM</td>
               <td>Sleep</td>
             </tr>
           </tbody>
         </table>
       </section>
       <section>
-        <h3 class="text-xl font-bold">here what I will do next:</h3>
+        <h3 class="text-xl font-bold">Here what I will do next:</h3>
         <ol class="list-decimal p-4 *:py-2">
           <li>
             continue learning web-development and some frame work , libraries.
